2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncDialog.cs: Handle NoConfiguredSyncService and
	  SyncServerCreationFailed.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncDialog.cs: Clean up the dialog so it's a little more
	  clean.  Update the text and hide progress bar properly.
	* Tomboy/SyncManager.cs: Use ActionManager to open sync.
	* Tomboy/Tomboy.cs: Moved the open sync dialog action back into
	  Tomboy.cs.
	* Tomboy/NoteWindow.cs: Use ActionManager to open the sync.
	* Tomboy/ActionManager.cs: Change text.

2007-06-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/PreferencesDialog.cs: Get preferences widget from newly
	  selected sync addin.

2007-06-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncServiceAddin.cs, Tomboy/SyncManager.cs,
	  Tomboy/Addins/FileSystemSyncService/FileSystemSyncServiceAddin.cs,
	  Tomboy/Addins/WebDavSyncService/WebDavSyncServiceAddin.cs,
	  Tomboy/Addins/SshSyncService/SshSyncServiceAddin.cs: Adding
	  SyncServiceAddin.PostSyncCleanup, which the FUSE backends use to
	  unmount the server when not in use.
	* Tomboy/Note.cs: Added TODO regarding trusting foreign note XML
	  content.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* configure.in, Makefile.include, Tomboy/Makefile.am, Tomboy/tomboy.in,
	  Makefile.am, po/POTFILES.in: Changed the location of Mono.Addins to
	  root of project.  Adjusted AM_INIT and AM_INIT_AUTOMAKE to allow
	  longer file paths when creating tarball.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* configure.in, Makefile.include, Tomboy/Makefile.am, Tomboy/tomboy.in,
	  Makefile.am, po/POTFILES.in: Changed the location of Mono.Addins to
	  root of project.  Adjusted AM_INIT and AM_INIT_AUTOMAKE to allow
	  longer file paths when creating tarball.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/Mono.Addins: Moved to root of project in hopes that it will
	  solve the problem of make distcheck.
